# blendcorpus

./: CMakeLists.txt  README.md  pyproject.toml  setup.py
blendcorpus/: __init__.py  dist_setup.py  global_vars.py  parallel_state.py  utils.py
blendcorpus/data/: Makefile  bert_dataset.py  biencoder_dataset_utils.py  blendable_dataset.py  config.py  data_samplers.py  dataset_utils.py  gpt_dataset.py  indexed_dataset.py  prompt_dataset.py  realm_dataset_utils.py  realm_index.py  t5_dataset.py  vit_dataset.py
llm_dataset/: __init__.py  parallel_state.py  utils.py
llm_dataset/data/: bert_dataset.py  blendable_dataset.py  data_samplers.py  dataset_utils.py  gpt_dataset.py  helpers.cpp  indexed_dataset.py
llm_dataset/tokenizer/: tokenizer.py
megatron/: arguments.py  checkpointing.py  global_vars.py  timers.py  training.py  training_log.py  training_log_alcf.py  utils.py
megatron/core/pipeline_parallel/: p2p_communication.py  schedules.py
megatron/core/tensor_parallel/: cross_entropy.py
megatron/data/: data_samplers.py  gpt_dataset.py  indexed_dataset.py  prompt_dataset.py
megatron/model/: __init__.py  fused_rmsnorm.py  language_model.py  rmsnorm.py  transformer.py
megatron/optimizer/: __init__.py  clip_grads.py  distrib_optimizer.py  sophia.py
preprocess/: __init__.py  gen_file_list.py  get_meta_data.py  launcher.sh  preprocess_data.py  preprocess_data_parallel.py  tokenization.sh
preprocess/fix_json/: README.md  fix_json.py  fix_json.sc  fix_json.sh  validate_json.py
preprocess/fuse_files/: README.md  __init__.py  fuse.sh  fuse_files_parallel.sh  merge_parquet.py
preprocess/tokenization/: README.md  tok.sh  tokenization.sh
tests/: test_dataloader.py  torch_setup.py
utils/: barrier.sh  download-huggingface-dataset.sh  mix_datasets.py
