[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blendcorpus"
dynamic = ["version"]
dependencies = [
  'nltk',
  # 'torch',
  'numpy',
  # 'deepspeed',
  'ezpz @ git+https://github.com/saforem2/ezpz.git',
  'sentencepiece',
  'mpi4py',
  'zstandard',
  'pybind11'
]

requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
]
license = { file = "LICENSE" }
keywords = ["pytorch", "datasets", "data", "corpus"]
readme = "README.md"
description = " BlendCorpus is a modular and scalable data preprocessing and loading framework for large language model (LLM) training. "
authors = [
  { name = "Huihuo Zheng", email="huihuo.zheng@anl.gov"},
  { name = "Sam Foreman", email = "foremans@anl.gov" }
]
maintainers = [
  { name = "Huihuo Zheng", email="huihuo.zheng@anl.gov"},
  { name = "Sam Foreman", email = "foremans@anl.gov" }
]

[project.scripts]
preprocess_data = "preprocess.preprocess_data:main"
tokenization = "preprocess.preprocess_data_parallel:main"
get_meta_data = "preprocess.get_meta_data:main"
test_dataloader = "tests.test_dataloader:main"
merge_parquet = "preprocess.fuse_files.merge_parquet:main"
gen_file_list = "preprocess.fuse_files.gen_file_list:main"




[tool.hatch.version]
path = "blendcorpus/__about__.py"

[tool.hatch.build]
exclude = ["outputs", "data", "logs", "checkpoints", "tests", ".venv", ".git", "__pycache__"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.envs.default]
dependencies = ["pytest", "pytest-cov"]

[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=src/ezpz --cov=tests"
no-cov = "cov --no-cov"

[[tool.hatch.envs.test.matrix]]
python = ["310", "311", "312"]


[tool.uv]
override-dependencies = [
    "torch; sys_platform == 'never'",
    "torchaudio; sys_platform == 'never'",
    "torchvision; sys_platform == 'never'",
    "mpi4py; sys_platform == 'never'",
]
# conflicts = [[{ extra = "xpu" }, { extra = "cpu" }, { extra = "cu128" }]]
